Implemented MCMC algorithm that samples GP trajectories. Need to test.

--- a/framework_calibrating_ecosystem_models.bib
+++ b/framework_calibrating_ecosystem_models.bib
@@ -212,7 +212,7 @@ ABSTRACT = {We present an approach to enhance the performance and flexibility of
 DOI = {10.3390/psf2021003011}
 }
 
-% Emulate the likelihood. 
+% Emulate the likelihood. Propose a GP-accelerated MCMC scheme that tries to sample trajectories from the GP. 
 @article{LEBEL2019158,
 title = {Statistical inverse identification for nonlinear train dynamics using a surrogate model in a Bayesian framework},
 journal = {Journal of Sound and Vibration},
